@@ -10,6 +10,16 @@ package top.hiccup.jdk.vm.gc;
  *
  * 日志中的GC和Full GC不是区分新生代和老年代的，如果有Full GC说明是发生了STW
  *
+ * -Xms / -Xmx — 堆的初始大小 / 堆的最大大小	一般设置为相同大小
+ * -Xmn — 堆中年轻代的大小
+ * -XX:-DisableExplicitGC — 让System.gc()不产生任何作用
+ * -XX:+PrintGCDetails — 打印GC的细节
+ * -XX:+PrintGCDateStamps — 打印GC操作的时间戳
+ * -XX:NewSize / XX:MaxNewSize — 设置新生代大小/新生代最大大小
+ * -XX:NewRatio — 可以设置老生代和新生代的比例
+ * -XX:PrintTenuringDistribution — 设置每次新生代GC后输出幸存者乐园中对象年龄的分布
+ * -XX:InitialTenuringThreshold / -XX:MaxTenuringThreshold：设置老年代阀值的初始值和最大值
+ * -XX:TargetSurvivorRatio：设置幸存区的目标使用率
  *
  * @author wenhy
  * @date 2019/2/10
